# RobotArchitecture

./: .gitmodules  README.md
FellowStudents/Niklas/: README.md
FellowStudents/Niklas/Expose/: Expose - Niklas Hellmann.docx  expose.docx  expose.txt  todo.txt
FellowStudents/Niklas/TESTORDNER/: README.md  collisions_auswerten_aus_textDatei.py  exponential_moving_average.py  read_collision_console.py  red_ball.py  red_tshirt.py
FellowStudents/Niklas/bachlorarbeit/: README.md
FellowStudents/Niklas/bachlorarbeit/Backups/: alter_latex_code.txt
FellowStudents/Niklas/bachlorarbeit/Maltes Anmerkungen/: Notizen zu Kapitel 3.txt
FellowStudents/Niklas/bachlorarbeit/Presentation/: Quellen.txt
FellowStudents/Niklas/localisation/: CMakeLists.txt  map.pgm  map.yaml  package.xml  setup.py
FellowStudents/Niklas/localisation/launch/: localisation_launch.launch
FellowStudents/Niklas/localisation/scripts/: simple_avoider_random_moves.py  test.py
FellowStudents/Niklas/map_obstacles/: package.xml
FellowStudents/Niklas/map_obstacles/launch/: avoidance_world.launch  special_tests.launch  test_launch.launch
FellowStudents/Niklas/map_obstacles/scripts/: move_one_object_specifically.py
FellowStudents/Niklas/obstacle_detector/: CMakeLists.txt  package.xml
FellowStudents/Niklas/obstacle_detector/scripts/: obstacle_detector.py
FellowStudents/Niklas/potential_field/: CMakeLists.txt  package.xml
FellowStudents/Niklas/potential_field/Ergebnisse/: weg_aufzeichnen.py
FellowStudents/Niklas/potential_field/PySimulation/: show_map_with_field_vectors.py  show_results_capf.py  show_results_fapf.py  show_results_iapf.py  sketch_enviroment.py  zutesten.txt
FellowStudents/Niklas/potential_field/Testordner/: check_formula.py  improved_potential_field.py  potential_field.py  rotational_apf.py  test.py
FellowStudents/Niklas/potential_field/improved_scripts/: i_apf.py  rf_apf.py
FellowStudents/Niklas/potential_field/launch/: mehrere_seeds_starten.launch  mehrere_test_starten.launch  spezific_tests.launch  start_moving_and_recording.launch
FellowStudents/Niklas/potential_field/scripts/: forward_potential_field.py  forward_potential_field_adjustments.py  rotational_forward_potential_field.py  (+2 more)
FellowStudents/Niklas/ps4_controller_turtlebot/: CMakeLists.txt  README.md  package.xml
FellowStudents/Niklas/target_observer/: CMakeLists.txt  README.md  package.xml
LayeredArchitecture/: README.md
Writing/Thesis/: Bachelorthesis.tex  Bachelorthesis.toc  Meine Bibliothek.bib  bachelorthesis.aux  bachelorthesis.bbl  bachelorthesis.bcf  bachelorthesis.blg  bachelorthesis.out  bachelorthesis.run.xml  bachelorthesisSources.bib  config.tex
Writing/Thesis/Graphics/: tree.txt
Writing/Thesis/chapter/: Background.tex  Conclusion.tex  Discussion.tex  Introduction.tex  Methods.tex  Results.tex  abstract.tex  declaration.aux  declaration.tex  titlepage.aux  titlepage.tex
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/turtlebot3_auto_navigator/share/turtlebot3_auto_navigator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/: Navigation_Log_Set_1__Differenced_and_Rounded_.csv  Navigation_Log_Set_2__Differenced_and_Rounded_.csv  Navigation_Log_Set_3__Differenced_and_Rounded_.csv  Navigation_Log_Set_4__Differenced_and_Rounded_.csv  navigation1.2.csv  navigation3.4.csv  navigation_log_set1_custom.csv  navigation_log_set2_custom.csv  navigation_log_set3_custom.csv  navigation_log_set4_custom.csv  sampleRealWorldMap.pgm
ros2_ws/src/Maps/: 20240408_003552.pgm  20240408_003552.yaml  20240408_003622.pgm  20240408_003622.yaml  20240408_003652.pgm  20240408_003652.yaml  20240408_003722.pgm  20240408_003722.yaml  20240408_003752.pgm  20240408_003752.yaml  20240408_003822.pgm  20240408_003822.yaml  20240408_003852.pgm  20240408_003852.yaml  20240408_003922.pgm  20240408_003922.yaml  20240505_165533.pgm  20240505_165533.yaml  20240505_165603.pgm  20240505_165603.yaml  20240505_165633.pgm  20240505_165633.yaml  20240505_165703.pgm  20240505_165703.yaml  20240505_165733.pgm  20240505_165733.yaml  20240505_165803.pgm  20240505_165803.yaml  20240505_165833.pgm  20240505_165833.yaml  20240505_165903.pgm  20240505_165903.yaml  20240505_165933.pgm  20240505_165933.yaml  20240505_170003.pgm  20240505_170003.yaml  20240505_170033.pgm  20240505_170033.yaml  20240505_170103.pgm  20240505_170103.yaml  (+2146 more)
ros2_ws/src/custom_msgs/: CMakeLists.txt
ros2_ws/src/custom_msgs/msg/: PriorityTwist.msg
ros2_ws/src/turtlebot3_analysis/: package.xml  setup.cfg  setup.py
ros2_ws/src/turtlebot3_analysis/turtlebot3_analysis/: heatmap_generator.py  position_logger.py
ros2_ws/src/turtlebot3_auto_navigator/: setup.cfg  setup.py
ros2_ws/src/turtlebot3_control_services/: CMakeLists.txt  package.xml
ros2_ws/src/turtlebot3_hardware_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/turtlebot3_launch_configurations/: setup.cfg  setup.py
ros2_ws/src/turtlebot3_map_change_detection/: setup.cfg  setup.py
ros2_ws/src/turtlebot3_nav_management/: package.xml  setup.cfg  setup.py
ros2_ws/src/turtlebot3_nav_management/config/: navigation_params.yaml
ros2_ws/src/turtlebot3_nav_management/launch/: navigation_launch.py  navigation_launch_with_nav2.py
ros2_ws/src/turtlebot3_nav_management/turtlebot3_nav_management/: astar.py  autonomous_navigation_using_nav2.py  custom_navigation.py  teleop_navigation.py  testing
ros2_ws/src/turtlebot3_nav_management/turtlebot3_nav_management/launch/: autonomous_navigation_nav2.launch.py
ros2_ws/src/turtlebot3_obstacle_avoidance/: package.xml  setup.py
ros2_ws/src/turtlebot3_random_explorer/: package.xml  setup.cfg  setup.py
ros2_ws/src/turtlebot3_slam_management/: setup.cfg  setup.py
(+1451 files in other folders)
