<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_analysis</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kohnen.marvin@googlemail.com">marvin</maintainer>
  <license>TODO: License declaration</license>


  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>opencv</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>turtlebot3_control_services</build_depend>

  <!-- External dependencies -->
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>matplotlib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>turtlebot3_control_services</exec_depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

