<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_nav_management</name>
  <version>0.0.0</version>
  <description>A package for managing navigation for TurtleBot3</description>
  <maintainer email="kohnen.marvin@googlemail.com">marvin</maintainer>
  <license>Apache-2.0</license> <!-- Update this as per your licensing -->

  <!-- Build and run dependencies -->
  <depend>rclpy</depend>
  <depend>nav2_common</depend>
  <depend>nav2_core</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <!--<depend>nav2_recoveries</depend>  DOESNT EXIST FOR ROS2 HUMBLE-->
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_map_server</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- If your package directly subscribes to sensor data like laser scans -->
  <depend>sensor_msgs</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
