<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_auto_navigator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kohnen.marvin@googlemail.com">marvin</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencies needed for your package -->
  <depend>rclpy</depend> <!-- ROS 2 Python client library -->
  <depend>nav2_msgs</depend> <!-- For navigation-related action messages -->
  <depend>geometry_msgs</depend> <!-- For pose and other geometry-related data structures -->

  <!-- If you use tf2 for transformations -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Optional dependencies if you interact with sensor data or visualization tools -->
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Buildtool depend, required for building the package -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
